# dylib-installer

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml  cargo-release.yml  github-release.yml  release.yml  update-homebrew-tap.yml
src/: main.rs
