[package]
name = "dylib_installer"
authors = ["Eason Chai <i@hackerchai.com>"]
description = "A tool to install dylib files and header to system library path."
version = "0.1.0"
edition = "2021"
license = "GPL-3"
license-file = "LICENSE"
homepage = "https://github.com/hackerchai/dylib-installer"
repository = "https://github.com/hackerchai/dylib-installer"

[dependencies]
clap = "4.5.9"
shellexpand = "3.1.0"
anyhow = "1.0"
termcolor = "1.4.1"
tokio = { version = "1", features = ["full"] }

[profile.release]
opt-level = "z"
lto = "fat"
panic = "abort"
codegen-units = 1